css/all.css
/*html { 
  background: url('../img/sunrise-crop-5.jpg') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100%;
}*/

@media (max-width: 770px) {
  .container {
    margin-left: 0px;
    margin-right: 0px;
    width: 100%;
  }
}

@media (max-width: 501px) {
  body {
    background-color: cornflowerblue;
    /*background-image: url('../img/mobile_background_4.jpg') !important;*/
  }
  
  .project-box {
    background-color: cornflowerblue !important;
  }
}

@media (min-width: 552px) {
  body {
    background-image: url('../img/background1920x1080.jpg');
  }
}

body {
  background-size: cover;
  background-attachment: fixed;
  height: 100%;
  min-height: 100%;
}


a {
  color: white;
  font-family: 'Raleway', sans-serif;
  border-radius: 8px !important;
  border: 4px solid transparent !important;  
  padding: 10px 15px;
  font-size: 14px;
  text-decoration: none !important;
}

.mini-display {
  opacity: 0;
  padding-top: 8px;
  font-size: 45px; 
  color: white;
  font-family: 'Syncopate', sans-serif;
}

h1 {
  font-family: 'Syncopate', sans-serif;
}

.the-r {
  color: gold;
}

.nav-pills>.row>div>li.active>a {
  font-weight: bold;
  color: white !important;
  background-color: transparent !important;
  border-radius: 8px;
  border: 4px solid white !important;
  transition: border .5s;
}

.nav-pills>.row>div>li>a {
  color: white !important;
  background-color: transparent !important;
  transition: border .5s;
}

@media (min-width:600px){
  .nav-pills>.row>div>li>a:hover {
    border: 4px solid white !important;
    transition: border .5s;
  }
}


.nav>li>a:hover,
.nav-pills>.row>div>li.active>a:focus, 
.nav-pills>.row>div>li.active>a:hover {
  border: 4px solid white !important;
}

.enter {
  opacity: 0;
}

.main-display {
  margin-bottom: 0px !important;
  font-size: 70px;
  /*font-size: 6vh;*/
  color: white;
  display: none;
  font-family: 'Syncopate', sans-serif;
}

.vcenter {
  display: inline-block;
  vertical-align: middle;
  float: none;
}

.nav {
  opacity: 0;
}

.vertical-center {
  min-height: 100%;  /* Fallback for vh unit */
  min-height: 100vh; /* You might also want to use
                        'height' property instead.
                        
                        Note that for percentage values of
                        'height' or 'min-height' properties,
                        the 'height' of the parent element
                        should be specified explicitly.
  
                        In this case the parent of '.vertical-center'
                        is the <body> element */

  /* Make it a flex container */
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex; 
  
  /* Align the bootstrap's container vertically */
    -webkit-box-align : center;
  -webkit-align-items : center;
       -moz-box-align : center;
       -ms-flex-align : center;
          align-items : center;
  
  /* In legacy web browsers such as Firefox 9
     we need to specify the width of the flex container */
  width: 100%;
  
  /* Also 'margin: 0 auto' doesn't have any effect on flex items in such web browsers
     hence the bootstrap's container won't be aligned to the center anymore.
  
     Therefore, we should use the following declarations to get it centered again */
         -webkit-box-pack : center;
            -moz-box-pack : center;
            -ms-flex-pack : center;
  -webkit-justify-content : center;
          justify-content : center;
}

.navbar {
  padding-top: 23px;
  min-width: 228px;
}

@media (max-width: 991px) {
  .mini-display {
    padding-top: 23px;
    font-size: 20px;
  }
}

@media (max-width: 450px) {
  .nav-pills>.row>div>li.active>a {
    color: white !important;
    background-color: transparent !important;
    border: 4px solid transparent !important;  
  }

  a {
    color: white;
    font-family: 'Raleway', sans-serif;
    border-radius: 8px !important;
    border: 2px solid transparent !important;  
    padding: 4px !important;
  }

  @media (min-width: 412px) {
    a {
      font-size: 15px;
    }
  }

  @media (max-width: 411px) {
    a {
      font-size: 11px;
    }
  }

}

.contact {
  font-size: 25px;
  color: white;
  font-family: 'Raleway';
}

.invis {
  display: none;
}

.sub-btn-1.active {
  font-weight: bolder;
}

